# rust_upload_file

./: Cargo.toml  Makefile  README.md
src/: main.rs
