[package]
name = "api_with_upload_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-multipart = "0.6.0"
actix-web = "4.5.1"
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
